# connections.games

./: .gitignore  Dockerfile  README.md  bower.json  connections.cabal  package.json  stack.yaml
data/: words.txt
src/main/haskell/Connections/: Types.hs  Util.hs
src/main/haskell/Connections/Game/: Create.hs  Play.hs
src/main/haskell/Connections/Web/: Controller.hs  Handle.hs  Route.hs  Store.hs
src/main/haskell/Main/: Main.hs
src/main/purescript/: Main.js  Main.purs
src/main/purescript/Connections/: Api.purs  Game.purs  Http.purs  Route.purs  Types.purs  View.purs
src/main/purescript/Connections/View/: GameView.purs  LandingView.purs
src/main/resources/static/: index.html  index.js  styles.css
