name:                connections
version:             0.1.0.0
stability:           Experimental
category:            Web
author:              Ben Pence
maintainer:          github@benpence.com
build-type:          Simple
cabal-version:       >= 1.10

data-files:
  src/main/resources/words.txt
  src/main/resources/static/*.css
  src/main/resources/static/*.js
  src/main/resources/static/*.html

executable connections-main
  hs-source-dirs:             src/main/haskell/Main
  main-is:                    Main.hs

  build-depends:
      base
    , connections
    , random
    , scotty
    , text

  default-language:           Haskell2010

library
  hs-source-dirs:             src/main/haskell
  exposed-modules:
    Connections.Game.Create
    Connections.Game.Play
    Connections.Web.Controller
    Connections.Web.Handle
    Connections.Web.Route
    Connections.Web.Store
    Connections.Types
    Connections.Util

  build-depends:
      base
    , aeson
    , array
    , containers
    , random
    , scotty
    , transformers
    , text

  default-language:           Haskell2010
